Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23526

InnoDB leaks memory for some static objects

    XMLWordPrintable

Details

    Description

      InnoDB is leaking some memory for statically allocated objects. The leaks were caught by some changes to SAFEMALLOC that allow instrumenting operator new. I did not try to find out how to make AddressSanitizer report them.

      The impact is small, because the few dozen bytes will be freed by the operating system when the process is terminated. But, because memory leaks can be a telltale sign of subsystems not being closed down properly, we prefer to fix them.

      The leaks were identified by monty and cvicentiu.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h
                  3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.