MDEV-23526 InnoDB leaks memory for some static objects

A leak of the contents of fil_system.ssd that was introduced in
commit 10dd290b4b8b8b235c8cf42e100f0a4415629e79 (MDEV-17380)
was caught by implementing SAFEMALLOC instrumentation of operator new.
I did not try to find out how to make AddressSanitizer or Valgrind
detect it.

fil_system_t::close(): Clear fil_system.ssd.

The leak was identified and a fix suggested by Michael Widenius
and Vicențiu Ciorbaru.